--- a/maven-example/multi3/src/main/webapp/index.html
+++ b/maven-example/multi3/src/main/webapp/index.html
@@ -15,8 +15,7 @@
       </tr>
     </table>
 
-    <p>This is the home page for the Artifactory CI/CD March 18 Training. </p>
-    <p>Instructor: Mark Galpin; Stanley Fong </p>
+    <p>This is the home page for the Artifactory CI/CD March 18 Training. What what!!! Word!!!</p>
+    <p>Instructor: Mark Galpin; Stanley Fong and the amaizng William Manning</p>
   </body>
 </html>
-
