--- a/maven-example/multi3/src/main/webapp/index.html
+++ b/maven-example/multi3/src/main/webapp/index.html
@@ -17,6 +17,7 @@
 
     <p>This is the home page for the Artifactory CI/CD March 18 Training. </p>
     <p>Instructor: Mark Galpin; Stanley Fong </p>
+    <p>Consultant: Mike Gormley (Gorms) </p>
   </body>
 </html>
 
