--- a/gradle-examples/4/gradle-example-ci-server/services/webservice/src/main/webapp/index.html
+++ b/gradle-examples/4/gradle-example-ci-server/services/webservice/src/main/webapp/index.html
@@ -16,6 +16,6 @@
     </table>
 
     <p>Be prepare to be amazed!  </p>
-    <p>Instructor: Manasimran Singh; Jainish Shah </p>
+    <p>Instructor: Mansimran Singh; Jainish Shah </p>
   </body>
 </html>
