--- a/gradle-examples/4/gradle-example-ci-server/services/webservice/src/main/webapp/index.html
+++ b/gradle-examples/4/gradle-example-ci-server/services/webservice/src/main/webapp/index.html
@@ -2,20 +2,7 @@
   <head>
     <title>JFrog Swamp-Up Docker Lifecycle Training </title>
   </head>
-  <body bgcolor=white>
-
-    <table border="0" cellpadding="10">
-      <tr>
-        <td>
-          <img src="images/swampuplogo.png">
-        </td>
-        <td>
-          <h1>Welcome Docker Lifecycle Training</h1>
-        </td>
-      </tr>
-    </table>
-
-    <p>Be prepare to be amazed!  </p>
-    <p>Instructor: Mansimran Singh; Jainish Shah </p>
+  <body bgcolor="black">
+          <p align="middle"><img src="images/logo.gif" align="middle"></p>
   </body>
 </html>
